src/objects/QIRS_Status__c.object
<CustomObject>
    <description>Contain QIRS record status</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QIRS__c</fullName>
        <description>Display QIRS record number</description>
        <label>QIRS</label>
        <referenceTo>QIRS__c</referenceTo>
        <relationshipLabel>Status</relationshipLabel>
        <relationshipName>QIRS_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status_Support__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted to Master Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Watch_List_Status__c</fullName>
        <label>Watch List Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QIRS Status</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QIRS Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>QIRS_record_Closed_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( TEXT( QIRS__r.Status__c ) == &apos;Closed&apos;, true,false)</errorConditionFormula>
        <errorMessage>Once the QIRS closed you cannot reopen it.</errorMessage>
    </validationRules>
</CustomObject>